{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 79,
  "lineage": "511ca307-d215-4556-e98d-e7b6182757d3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "KCS-AWS-TF01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b8e6ca4a228cbb0c",
            "domain": "vpc",
            "id": "eipalloc-01ad3b44ce923e05d",
            "instance": "i-02f37e3c3f062618d",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0db52f48eb9c25d3c",
            "private_dns": "ip-10-0-41-68.us-east-2.compute.internal",
            "private_ip": "10.0.41.68",
            "public_dns": "ec2-3-131-186-50.us-east-2.compute.amazonaws.com",
            "public_ip": "3.131.186.50",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "KCS-AWS-TF-IP01"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.KCS-AWS-TF01",
            "aws_internet_gateway.KCS-AWS-TF",
            "aws_security_group.KCS-AWS-TF-SG",
            "aws_subnet.KCS-AWS-TF",
            "aws_vpc.KCS-AWS-TF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "KCS-AWS-TF02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e9b9cce65e39c230",
            "domain": "vpc",
            "id": "eipalloc-0804978519d395c87",
            "instance": "i-02f0cc1c05f2fb974",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0de9e8f8434e095ff",
            "private_dns": "ip-10-0-166-155.us-east-2.compute.internal",
            "private_ip": "10.0.166.155",
            "public_dns": "ec2-3-139-45-230.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.45.230",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "KCS-AWS-TF-IP02"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.KCS-AWS-TF02",
            "aws_internet_gateway.KCS-AWS-TF",
            "aws_security_group.KCS-AWS-TF-SG",
            "aws_subnet.KCS-AWS-TF",
            "aws_vpc.KCS-AWS-TF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "KCS-AWS-TF01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07efac79022b86107",
            "arn": "arn:aws:ec2:us-east-2:520364035831:instance/i-02f37e3c3f062618d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02f37e3c3f062618d",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "KCS-AWS-TF-KeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0db52f48eb9c25d3c",
            "private_dns": "ip-10-0-41-68.us-east-2.compute.internal",
            "private_ip": "10.0.41.68",
            "public_dns": "ec2-3-131-186-50.us-east-2.compute.amazonaws.com",
            "public_ip": "3.131.186.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-009ebf3491c866cb3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0efe4858dda716406",
            "tags": {
              "Name": "KCS-AWS-TF01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00f1b42064586206d"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.KCS-AWS-TF",
            "aws_security_group.KCS-AWS-TF-SG",
            "aws_subnet.KCS-AWS-TF",
            "aws_vpc.KCS-AWS-TF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "KCS-AWS-TF02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07efac79022b86107",
            "arn": "arn:aws:ec2:us-east-2:520364035831:instance/i-02f0cc1c05f2fb974",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02f0cc1c05f2fb974",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "KCS-AWS-TF-KeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0de9e8f8434e095ff",
            "private_dns": "ip-10-0-166-155.us-east-2.compute.internal",
            "private_ip": "10.0.166.155",
            "public_dns": "ec2-3-139-45-230.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.45.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-058d368fec031b7de",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0efe4858dda716406",
            "tags": {
              "Name": "KCS-AWS-TF02"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00f1b42064586206d"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.KCS-AWS-TF",
            "aws_security_group.KCS-AWS-TF-SG",
            "aws_subnet.KCS-AWS-TF",
            "aws_vpc.KCS-AWS-TF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "KCS-AWS-TF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:520364035831:internet-gateway/igw-023101dadaf1fdb35",
            "id": "igw-023101dadaf1fdb35",
            "owner_id": "520364035831",
            "tags": {
              "Name": "KCS-AWS-TF"
            },
            "vpc_id": "vpc-06305df58ebfcfef5"
          },
          "dependencies": [
            "aws_vpc.KCS-AWS-TF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "KCS-AWS-TF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-008c93ee8657d1039",
            "owner_id": "520364035831",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-023101dadaf1fdb35",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "KCS-AWS-TF"
            },
            "vpc_id": "vpc-06305df58ebfcfef5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.KCS-AWS-TF",
            "aws_vpc.KCS-AWS-TF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fad54fc0e50c8c9e",
            "route_table_id": "rtb-008c93ee8657d1039",
            "subnet_id": "subnet-0efe4858dda716406"
          },
          "dependencies": [
            "aws_internet_gateway.KCS-AWS-TF",
            "aws_route_table.KCS-AWS-TF",
            "aws_subnet.KCS-AWS-TF",
            "aws_vpc.KCS-AWS-TF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "KCS-AWS-TF-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:520364035831:security-group/sg-00f1b42064586206d",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f1b42064586206d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "KCS-AWS-TF-SG",
            "name_prefix": "",
            "owner_id": "520364035831",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "KCS-AWS-TF-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06305df58ebfcfef5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.KCS-AWS-TF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "KCS-AWS-TF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:520364035831:subnet/subnet-0efe4858dda716406",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.0/16",
            "id": "subnet-0efe4858dda716406",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "520364035831",
            "tags": {
              "Name": "KCS-AWS-TF"
            },
            "vpc_id": "vpc-06305df58ebfcfef5"
          },
          "dependencies": [
            "aws_internet_gateway.KCS-AWS-TF",
            "aws_vpc.KCS-AWS-TF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "KCS-AWS-TF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:520364035831:vpc/vpc-06305df58ebfcfef5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d23349364b9d5e62",
            "default_route_table_id": "rtb-08095d340e451667a",
            "default_security_group_id": "sg-0101552dff87af491",
            "dhcp_options_id": "dopt-0b118760",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06305df58ebfcfef5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08095d340e451667a",
            "owner_id": "520364035831",
            "tags": {
              "Name": "KCS-AWS-TF"
            }
          }
        }
      ]
    }
  ]
}